FISH-7248: Downgrade string formatting.